Fix blurry WP logo on Safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,10 @@
   box-shadow: none;
 }
 
+.wordpress-icon {
+content:url("https://s.w.org/style/images/about/WordPress-logotype-simplified.png")  
+
+}
 
 /* Navbar Scroll */
 
